・MainActivity2に明示的intent、暗黙的intentの実装 ・MainActivity3のレイアウト修正

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.MobileAppDevATest">
         <activity
             android:name=".MainActivity3"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity2"
             android:exported="true">
