--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,7 +10,8 @@ constraintlayout = "2.2.1"
 desugerJdkLibs = "2.1.5"
 datastore = "1.1.7"
 recyclerview = "1.4.0"
-
+okhttp = "5.1.0"
+moshi = "1.15.2"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -24,6 +25,8 @@ desuger-jdk-libs = { group = "com.android.tools", name = "desugar_jdk_libs", ver
 datastore-preferences = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
 datastore-preferences-rxjava3 = { group = "androidx.datastore", name = "datastore-preferences-rxjava3", version.ref = "datastore" }
 recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version.ref = "recyclerview" }
+okhttp = {group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp"}
+moshi = {group = "com.squareup.moshi", name = "moshi", version.ref = "moshi"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
