--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,16 @@
         android:theme="@style/Theme.MobileAppDevATest">
         <activity
             android:name=".MainActivity7"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity6"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".MainActivity6"
+            android:exported="true" />
         <activity
             android:name=".MainActivity5"
             android:exported="true" />
